--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- viewport info -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+
     <!-- styling-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -24,52 +27,64 @@
 </head>
 
 <body>
-    <header>
-        <div class="navbar navbar-brand">
-            <a href="index.html">Home</a>
-            <a href="about-me.html">About Me</a>
-            <a href="#top-rides">Top Rides</a>
-            <h1>Pacific Northwest Trails</h1>
-        </div>
-    </header>
+    <div>
+        <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed-top">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about-me.html">About Me</a></li>
+            <li><a href="#top-rides">Top Rides</a></li>
+        </nav>
+    </div>
+
 
     <main>
-        <section id="overview">
-            <h2> Overview </h2>
 
-            <p>
-                Washington, Oregon and much of the "<a href="https://vancouversnorthshore.com/"
-                    alt="Vancouver's official site for the North Shore">North Coast</a>" hosts some of the best mountain
-                biking in the world.
-            </p>
+        <header id="header">
+            <h1>Pacific Northwest Trails</h1>
+        </header>
 
-            <p>
-                Through the help of organizations such as the <a href="https://www.evergreenmtb.org/">Evergreen Mountain
-                    Bike
-                    Alliance</a>, <a href="https://www.wmbcmtb.org/" alt="Whatcom Mountain Bike Coalition website">
-                    Whatcom Mountain Bike Coalition</a> , and more, the Pacific Northwest has evolved into a mountain
-                biking mecca.
-            </p>
+        <div class="container">
+            <section id="overview">
+                <h2> Overview </h2>
+                <hr>
+                <p>
+                    Washington, Oregon and much of the "<a href="https://vancouversnorthshore.com/"
+                        alt="Vancouver's official site for the North Shore">North Coast</a>" hosts some of the best
+                    mountain
+                    biking in the world.
+                </p>
 
-            <p>
-                Every year, people travel from all over the world to ride the trails in our backyard. Here,
-                riders can find nearly everything, from flowy cross-country to technical downhill to lift-assisted bike
-                parks. There truly is something for everyone.
-            </p>
+                <p>
+                    Through the help of organizations such as the <a href="https://www.evergreenmtb.org/">Evergreen
+                        Mountain
+                        Bike
+                        Alliance</a>, <a href="https://www.wmbcmtb.org/" alt="Whatcom Mountain Bike Coalition website">
+                        Whatcom Mountain Bike Coalition</a> , and more, the Pacific Northwest has evolved into a
+                    mountain
+                    biking mecca.
+                </p>
 
-            <section id="images">
-                <img id="tokul" src="images/tokul.png" alt="Tokul Mountain Bike Trails">
-                <cite>From <a
-                        href="https://www.pinkbike.com/news/social-distancing-a-pinkbike-photo-epic-for-the-times.html">"Social
-                        Distancing"</a> by Pinkbike.</cite>
+                <p>
+                    Every year, people travel from all over the world to ride the trails in our backyard. Here,
+                    riders can find nearly everything, from flowy cross-country to technical downhill to lift-assisted
+                    bike
+                    parks. There truly is something for everyone.
+                </p>
 
-                <img id="galbraith" src="images/Galbraith.jpg" alt="Galbraith Mountain">
-                <cite>From <a href="https://www.adventuresnw.com/pnw-bucket-list-mountain-bike-trails/">Carl
-                        Bremen</a></cite>
+                <section id="images">
+                    <img id="tokul" src="images/tokul.png" alt="Tokul Mountain Bike Trails">
+                    <p class = "img-citation"><cite>From <a
+                                href="https://www.pinkbike.com/news/social-distancing-a-pinkbike-photo-epic-for-the-times.html">"Social
+                                Distancing"</a> by Pinkbike.</cite>
+                    </p>
 
-            </section>
+                    <img id="galbraith" src="images/Galbraith.jpg" alt="Galbraith Mountain">
+                    <p class = "img-citation"><cite>From <a href="https://www.adventuresnw.com/pnw-bucket-list-mountain-bike-trails/">Carl
+                                Bremen</a></cite>
+                    </p>
 
-        </section>
+                </section>
+        </div>
+
 
         <section id="top-rides">
             <h2> Top Rides in the Pacific Northwest</h2>
