fixed mobile layout

--- a/index.html
+++ b/index.html
@@ -84,9 +84,11 @@
                     </p>
 
                 </section>
+            </section>
+
         </div>
 
-        <div class = "container" id = "rides">
+        <div class="container" id="rides">
             <section id="top-rides">
                 <h2> Top Rides in the Pacific Northwest</h2>
                 <hr>
@@ -95,10 +97,10 @@
                     the most popular. </p>
                 <p> Below is a brief list of the top rides in the PNW. For a more comprehensive list of rides, please
                     see
-                    the "Rides" page. </p>
-                
-                <hr>
+                    the "Rides" page.
+                </p>
 
+                <hr>
                 <div id="top-whistler">
                     <h3> <a href="https://www.whistlerblackcomb.com/Explore-The-Resort/Activities-and-Events/Whistler-Mountain-Bike-Park/Whistler-Mountain-Bike-Park"
                             alt="Whistler Bike Park Website">1. Whistler Bike Park</a></h3>
