--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
         </nav>
     </div>
 
-
     <main>
-
         <header id="header">
             <h1>Pacific Northwest Trails</h1>
         </header>
@@ -48,9 +46,7 @@
                 <hr>
                 <p>
                     Washington, Oregon and much of the "<a href="https://vancouversnorthshore.com/"
-                        alt="Vancouver's official site for the North Shore">North Coast</a>" hosts some of the best
-                    mountain
-                    biking in the world.
+                        alt="Vancouver's official site for the North Shore">North Coast</a>" hosts some of the best mountain biking in the world.
                 </p>
 
                 <p>
