--- a/about-me/about-me.html
+++ b/about-me/about-me.html
@@ -20,7 +20,8 @@
     <!-- styling -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="about-me.css">
 
     <title>About Me - WA Trails</title>
 </head>
@@ -28,8 +29,9 @@
 <body>
     <div>
         <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed-top">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="about-me.html">About Me</a></li>
+            <li><a href="https://www.evergreenmtb.org/support-us/donate" target="_blank">Donate</a></li>
             <li><a href="#bike-setup">Bike Setup</a></li>
         </nav>
     </div>
@@ -45,7 +47,7 @@
                 <h2>About Me</h2>
                 <hr>
 
-                <img src="images/Quinton.jpg" alt="Author's picture">
+                <img src="../images/Quinton.jpg" alt="Author's picture">
                 <p class="font-weight-bold">My name is Quinton Price.</p>
                 <p>
                     I'm 20 years old and from the Seattle area. I'm currently majoring
@@ -94,8 +96,7 @@
                     <tbody>
                         <tr>
                             <th scope="row">Bike:</th>
-                            <td><a
-                                    href="https://www.trekbikes.com/us/en_US/us/en_US/bikes/mountain-bikes/trail-mountain-bikes/remedy/remedy-8/p/32883/">2021
+                            <td><a href="https://www.trekbikes.com/us/en_US/us/en_US/bikes/mountain-bikes/trail-mountain-bikes/remedy/remedy-8/p/32883/" target="_blank">2021
                                     Trek Rememdy 8</a>, Size 17.5</td>
                         </tr>
                         <tr>
@@ -104,31 +105,31 @@
                         </tr>
                         <tr>
                             <th scope="row">Rear Shock:</th>
-                            <td><a href="https://www.sram.com/en/rockshox/models/rs-sdlx-selp-b2">Rockshox Super Deluxe</a>
+                            <td><a href="https://www.sram.com/en/rockshox/models/rs-sdlx-selp-b2" target="_blank">Rockshox Super Deluxe</a>
                             </td>
                         </tr>
                         <tr>
                             <th scope="row">Fork:</th>
-                            <td><a href="https://www.sram.com/en/rockshox/models/fs-lyrk-selp-c3">Rockshox Lyrik
+                            <td><a href="https://www.sram.com/en/rockshox/models/fs-lyrk-selp-c3" target="_blank">Rockshox Lyrik
                                     Select+</a></td>
                         </tr>
                         <tr>
                             <th scope="row">Front Tire:</th>
-                            <td><a href="https://www.maxxis.com/catalog/tire-470-140-minion-dhr-ii">Maxxis Minon
+                            <td><a href="https://www.maxxis.com/catalog/tire-470-140-minion-dhr-ii" target="_blank">Maxxis Minon
                                     DHRII</a> MaxTerra / Evo Compound, 27.5x2.6</td>
                         </tr>
                         <tr>
                             <th scope="row">Rear Tire:</th>
-                            <td><a href="https://www.maxxis.com/catalog/tire-470-140-minion-dhr-ii">Maxxis Minon
+                            <td><a href="https://www.maxxis.com/catalog/tire-470-140-minion-dhr-ii" target="_blank">Maxxis Minon
                                     DHRII</a> Maxterra / Evo Compound, 27.5x2.6</td>
                         </tr>
                         <tr>
                             <th scope="row">Pedals:</th>
-                            <td><a href="https://www.raceface.com/products/chester-pedal"></a>Raceface Chester</td>
+                            <td><a href="https://www.raceface.com/products/chester-pedal" target="_blank"></a>Raceface Chester</td>
                         </tr>
                         <tr>
                             <th scope="row">Grips:</th>
-                            <td><a href="http://odigrips.com/store/elitelock-ongrips-2622">ODI Elite Pro</a></td>
+                            <td><a href="http://odigrips.com/store/elitelock-ongrips-2622" target="_blank">ODI Elite Pro</a></td>
                         </tr>
                         <tr>
                             <th scope="row">Weight:</th>
@@ -150,7 +151,7 @@
                     </tbody>
                 </table>
 
-                <img src="images/Bike1.jpg" alt="Bike leaning against tree">
+                <img src="../images/Bike1.jpg" alt="Bike leaning against tree">
             </section>
         </div>
     </main>
