--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
 </head>
 
 <body>
-    <div>
+    <div id = "navbar-div">
         <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed-top">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about-me.html">About Me</a></li>
+            <li><a href="about-me/about-me.html">About Me</a></li>
+            <li><a href="https://www.evergreenmtb.org/support-us/donate" target="_blank">Donate</a></li>
             <li><a href="#top-rides">Top Rides</a></li>
         </nav>
     </div>
