fix rel-noopener error

--- a/about-me/about-me.html
+++ b/about-me/about-me.html
@@ -96,7 +96,8 @@
                     <tbody>
                         <tr>
                             <th scope="row">Bike:</th>
-                            <td><a href="https://www.trekbikes.com/us/en_US/us/en_US/bikes/mountain-bikes/trail-mountain-bikes/remedy/remedy-8/p/32883/" target="_blank">2021
+                            <td><a href="https://www.trekbikes.com/us/en_US/us/en_US/bikes/mountain-bikes/trail-mountain-bikes/remedy/remedy-8/p/32883/"
+                                    target="_blank">2021
                                     Trek Rememdy 8</a>, Size 17.5</td>
                         </tr>
                         <tr>
@@ -105,31 +106,37 @@
                         </tr>
                         <tr>
                             <th scope="row">Rear Shock:</th>
-                            <td><a href="https://www.sram.com/en/rockshox/models/rs-sdlx-selp-b2" target="_blank">Rockshox Super Deluxe</a>
+                            <td><a href="https://www.sram.com/en/rockshox/models/rs-sdlx-selp-b2"
+                                    target="_blank">Rockshox Super Deluxe</a>
                             </td>
                         </tr>
                         <tr>
                             <th scope="row">Fork:</th>
-                            <td><a href="https://www.sram.com/en/rockshox/models/fs-lyrk-selp-c3" target="_blank">Rockshox Lyrik
+                            <td><a href="https://www.sram.com/en/rockshox/models/fs-lyrk-selp-c3"
+                                    target="_blank">Rockshox Lyrik
                                     Select+</a></td>
                         </tr>
                         <tr>
                             <th scope="row">Front Tire:</th>
-                            <td><a href="https://www.maxxis.com/catalog/tire-470-140-minion-dhr-ii" target="_blank">Maxxis Minon
+                            <td><a href="https://www.maxxis.com/catalog/tire-470-140-minion-dhr-ii"
+                                    target="_blank">Maxxis Minon
                                     DHRII</a> MaxTerra / Evo Compound, 27.5x2.6</td>
                         </tr>
                         <tr>
                             <th scope="row">Rear Tire:</th>
-                            <td><a href="https://www.maxxis.com/catalog/tire-470-140-minion-dhr-ii" target="_blank">Maxxis Minon
+                            <td><a href="https://www.maxxis.com/catalog/tire-470-140-minion-dhr-ii"
+                                    target="_blank">Maxxis Minon
                                     DHRII</a> Maxterra / Evo Compound, 27.5x2.6</td>
                         </tr>
                         <tr>
                             <th scope="row">Pedals:</th>
-                            <td><a href="https://www.raceface.com/products/chester-pedal" target="_blank"></a>Raceface Chester</td>
+                            <td><a href="https://www.raceface.com/products/chester-pedal" target="_blank"></a>Raceface
+                                Chester</td>
                         </tr>
                         <tr>
                             <th scope="row">Grips:</th>
-                            <td><a href="http://odigrips.com/store/elitelock-ongrips-2622" target="_blank">ODI Elite Pro</a></td>
+                            <td><a href="http://odigrips.com/store/elitelock-ongrips-2622" target="_blank">ODI Elite
+                                    Pro</a></td>
                         </tr>
                         <tr>
                             <th scope="row">Weight:</th>
