--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 </head>
 
 <body>
-    <div id = "navbar-div">
+    <div id="navbar-div">
         <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed-top">
             <li><a href="index.html">Home</a></li>
             <li><a href="about-me/about-me.html">About Me</a></li>
-            <li><a href="https://www.evergreenmtb.org/support-us/donate" target="_blank">Donate</a></li>
+            <li><a href="https://www.evergreenmtb.org/support-us/donate" target="_blank" rel="noopener">Donate</a></li>
             <li><a href="#top-rides">Top Rides</a></li>
         </nav>
     </div>
@@ -47,7 +47,8 @@
                 <hr>
                 <p>
                     Washington, Oregon and much of the "<a href="https://vancouversnorthshore.com/"
-                        alt="Vancouver's official site for the North Shore">North Coast</a>" hosts some of the best mountain biking in the world.
+                        alt="Vancouver's official site for the North Shore">North Coast</a>" hosts some of the best
+                    mountain biking in the world.
                 </p>
 
                 <p>
