--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 
     <!-- styling-->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+KR&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
@@ -31,10 +32,13 @@
         <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed-top">
             <li><a href="index.html">Home</a></li>
             <li><a href="about-me/about-me.html">About Me</a></li>
+            <li> <a href="trails/trails.html">Trails</a></li>
             <li><a href="https://www.evergreenmtb.org/support-us/donate" target="_blank" rel="noopener">Donate</a></li>
             <li><a href="#top-rides">Top Rides</a></li>
         </nav>
     </div>
+
+    <button class="button btn-dark" id="dark_mode">Dark Mode</button>
 
     <main>
         <header id="header">
@@ -96,7 +100,7 @@
                     the most popular. </p>
                 <p> Below is a brief list of the top rides in the PNW. For a more comprehensive list of rides, please
                     see
-                    the "Rides" page.
+                    the "<a href="trails/trails.html">Trails</a>" page.
                 </p>
 
                 <hr>
@@ -135,6 +139,7 @@
 
                 </div>
 
+                <hr>
                 <div id="top-galbraith">
                     <h3><a href="https://www.wmbcmtb.org/galbraith">2. Galbraith Mountain</a></h3>
 
@@ -180,6 +185,10 @@
         <a href="mailto:quintonp10@gmail.com">Contact</a>.
         Quinton Price &copy;. All rights reserved.
     </footer>
+
+    <!-- scripts -->
+    <script src="js/main.js"></script>
+
 </body>
 
 </html>
