--- a/trails/trails.html
+++ b/trails/trails.html
@@ -42,7 +42,6 @@
     </header>
 
     <main>
-
         <div class="container" id="blurb">
             <h2> Trails in the Pacific Northwest</h2>
             <hr>
@@ -84,6 +83,8 @@
                 <li>Trail Type: Freeride, Flow, Jumps, Technical Riding</li>
                 <li>Elevation: 5,000 ft</li>
             </ul>
+
+
 
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2558.553442559852!2d-122.956630784113!3d50.11336491947661!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5487234d0643925b%3A0x6f4a138d3cc4d3b6!2sWhistler%20Mountain%20Bike%20Park!5e0!3m2!1sen!2sus!4v1603345383168!5m2!1sen!2sus"
@@ -145,9 +146,30 @@
 
         </div>
 
+
+        <div class="container" id="weather">
+
+            <h3 class="font-weight-bold">Find the weather for your next trip!</h3>
+            
+            <p>Enter the city you wish to travel to below and see what the weather is like currently.</p>
+            
+            <div class="input">
+                <input type="text" class="inputValue form-control" placeholder="Type a city..">
+                <input type="submit" value="Submit" class="submit-button btn btn-primary">
+            </div>
+
+            <div class="display">
+                <h3 class="city-name font-weight-bold"></h1>
+                <p class="desc"></p>
+                <p class="temp"></p>
+                <p class="feels-like"></p>
+            </div>
+        </div>
+
         <div class="container trail">
             <h3 class="font-weight-bold">More to come..</h3>
         </div>
+
 
     </main>
 
